Bug 31108 - [V8] REGRESSION: Pause on exception is broken https://bugs.webkit.org/show_bug.cgi?id=31108

Reviewed by Pavel Feldman.

* bindings/v8/V8AbstractEventListener.cpp:
(WebCore::V8AbstractEventListener::invokeEventHandler):
* bindings/v8/V8Utilities.cpp:
(WebCore::reportException):

Canonical link: https://commits.webkit.org/41998@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50568 268f45cc-cd09-0410-ab3c-d52691b4dbfc